--- a/src/style.css
+++ b/src/style.css
@@ -36,3 +36,13 @@ header img {
   font-size: 36px;
   font-weight: bold;
 }
+
+footer {
+  border: solid black 2px;
+  font-weight: bold;
+  font-size: 16px;
+  text-align: center;
+  background-color: rgb(203, 203, 203);
+  bottom: 0;
+  width: 100%;
+}
