Revert changes in dev branch

--- a/src/style.css
+++ b/src/style.css
@@ -43,16 +43,6 @@ header img {
   font-weight: bold;
 }
 
-.moviediv {
-  display: grid;
-  grid-template-columns: 33% 33% 33%;
-  grid-template-rows: auto auto auto auto;
-  gap: 10px;
-  padding-left: 10%;
-  padding-right: 10%;
-  margin-bottom: 50px;
-}
-
 .item {
   display: flex;
   flex-direction: column;
@@ -161,4 +151,15 @@ footer {
   background-color: rgb(203, 203, 203);
   bottom: 0;
   width: 100%;
+}
+
+/* Comments-Popup CSS */
+.moviediv {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  grid-template-rows: auto auto auto auto;
+  gap: 10px;
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-bottom: 50px;
 }
