--- a/src/style.css
+++ b/src/style.css
@@ -101,13 +101,6 @@ button {
   padding: 0;
 }
 
-.comments {
-  font-size: 18px;
-  font-weight: bolder;
-  margin: 0;
-  cursor: pointer;
-}
-
 .reservations {
   border: solid black 1px;
   padding-top: 8px;
@@ -162,4 +155,136 @@ footer {
   border-top-left-radius: calc(0.3rem - 1px);
   border-top-right-radius: calc(0.3rem - 1px);
   width: 90%;
+}
+
+.comments {
+  font-size: 18px;
+  font-weight: bolder;
+  margin: 0;
+  cursor: pointer;
+}
+
+.cont-pop-up {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  background-color: rgb(206, 209, 202);
+  width: 50%;
+  height: 100%;
+  bottom: 0;
+  margin-left: 160px;
+  overflow-y: scroll;
+}
+
+.modal.active {
+  display: block;
+}
+
+.modal-header {
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 1rem;
+  border-bottom: 1px solid #dee2e6;
+  border-top-left-radius: calc(0.3rem - 1px);
+  border-top-right-radius: calc(0.3rem - 1px);
+  width: 90%;
+}
+
+.close-button {
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: -0.5rem 1rem -0.5rem auto;
+}
+
+.modal img {
+  width: 64%;
+  margin-top: 20px;
+}
+
+.movie-title {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: center;
+  margin-top: 8px;
+}
+
+.movie-info {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: center;
+  margin-top: 0;
+  gap: 25px;
+}
+
+.comment-list {
+  width: 80%;
+  padding-left: 10px;
+  padding-right: 10px;
+  min-height: 50px;
+  max-height: 80px;
+  overflow-y: auto;
+  background-color: white;
+  border-radius: 8px;
+}
+
+.comments-li {
+  list-style: none;
+}
+
+.addcom {
+  display: flex;
+  justify-content: center;
+}
+
+.username {
+  width: 250px;
+  border: 1px solid;
+  padding: 2%;
+  margin: 4% 0;
+  border-radius: 4px;
+}
+
+.insight {
+  width: 250px;
+  border: 1px solid;
+  height: 50px;
+  padding: 2%;
+  margin: 4% 0;
+  border-radius: 4px;
+}
+
+.addnew-btn {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: rgba(216, 210, 210, 0.822);
+  border: 1px solid;
+  width: 65px;
+  margin-top: 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.addnew-btn:hover {
+  background-color: rgb(86, 192, 206);
+}
+
+.message {
+  display: none;
+  color: red;
+}
+
+.message.active {
+  display: block;
 }
