--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 header {
   display: flex;
   justify-content: center;
@@ -97,10 +91,6 @@ header img {
   margin-top: 20px;
 }
 
-button {
-  padding: 0;
-}
-
 .reservations {
   border: solid black 1px;
   padding-top: 8px;
@@ -109,17 +99,12 @@ button {
   font-weight: bolder;
 }
 
-footer {
-  border: solid black 2px;
-  font-weight: bold;
-  font-size: 16px;
-  text-align: center;
-  background-color: rgb(203, 203, 203);
-  bottom: 0;
-  width: 100%;
+button {
+  padding: 0;
 }
 
-/* Comments-Popup CSS */
+/* comments pop-up section starts here */
+
 .moviediv {
   display: grid;
   grid-template-columns: 33% 33% 33%;
@@ -128,33 +113,6 @@ footer {
   padding-left: 10%;
   padding-right: 10%;
   margin-bottom: 50px;
-}
-
-.modal {
-  display: none;
-  position: fixed;
-  background-color: rgb(206, 209, 202);
-  width: 50%;
-  height: 100%;
-  bottom: 0;
-  margin-left: 160px;
-  overflow-y: scroll;
-}
-
-.modal.active {
-  display: block;
-}
-
-.modal-header {
-  display: flex;
-  flex-shrink: 0;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1rem 1rem;
-  border-bottom: 1px solid #dee2e6;
-  border-top-left-radius: calc(0.3rem - 1px);
-  border-top-right-radius: calc(0.3rem - 1px);
-  width: 90%;
 }
 
 .comments {
@@ -287,4 +245,101 @@ footer {
 
 .message.active {
   display: block;
+}
+
+/* Comments-popup section finish */
+footer {
+  border: solid black 2px;
+  font-weight: bold;
+  font-size: 16px;
+  text-align: center;
+  background-color: rgb(203, 203, 203);
+  bottom: 0;
+  width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    column-gap: 10px;
+  }
+
+  header img {
+    width: 150px;
+    height: 60px;
+    animation-name: showlogo;
+    animation-duration: 4s;
+  }
+
+  @keyframes showlogo {
+    from {
+      width: 1px;
+      height: 1px;
+    }
+
+    to {
+      width: 150px;
+      height: 60px;
+    }
+  }
+
+  #categories {
+    column-gap: 10px;
+  }
+
+  #categories li {
+    list-style: none;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  .title {
+    font-size: 14px;
+  }
+
+  .like {
+    width: 20px;
+    height: 20px;
+  }
+
+  .like-text {
+    font-size: 12px;
+    font-weight: 200;
+  }
+
+  .comments {
+    font-size: 14px;
+  }
+
+  .reservations {
+    font-size: 14px;
+  }
+
+  .moviediv {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+    gap: 10px;
+    padding-left: 10%;
+    padding-right: 10%;
+    margin-bottom: 50px;
+  }
+
+  .modal {
+    display: none;
+    position: fixed;
+    background-color: rgb(206, 209, 202);
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: -160px;
+    overflow-y: scroll;
+  }
+
+  .comment-form {
+    margin-bottom: 100px;
+  }
 }
