--- a/src/style.css
+++ b/src/style.css
@@ -122,7 +122,25 @@ button {
   cursor: pointer;
 }
 
+.cont-pop-up {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid black;
+  width: 96%;
+  margin: auto;
+}
 
+.modal {
+  display: none;
+  position: fixed;
+  background-color: rgb(206, 209, 202);
+  width: 75%;
+  height: 100%;
+  bottom: 0;
+  margin-left: 41px;
+  overflow-y: scroll;
+}
 
 .modal.active {
   display: block;
